fix various small things

--- a/info/hilfe/ansprechpartner.tex
+++ b/info/hilfe/ansprechpartner.tex
@@ -1,6 +1,6 @@
 %&\subsection{Studentische Studienberatung}
 Wenn ihr Fragen bezüglich eures Studienablaufes, eurer Prüfungsordnung, Orientierungs- oder Zwischenprüfungen etc. habt, kann euch mit hoher
-Wahrscheinlichkeit die \textbf{studentische Studienberatung} weiterhelfen. Das sind Studenten des jeweiligen Studiengangs, die mit allen Regularien vertraut sind
+Wahrscheinlichkeit die \textbf{studentische Studienberatung} weiterhelfen. Das sind Studierende des jeweiligen Studiengangs, die mit allen Regularien vertraut sind
 und einen guten Draht zu den PA-Vorsitzenden haben. Im Folgenden sind das: \\
 
 %\vfill %\pagebreak
