--- a/kogni/uni/infrastruktur.tex
+++ b/kogni/uni/infrastruktur.tex
@@ -36,7 +36,7 @@ Für die Kognitionswissenschaft sind folgende Bibliotheken interessant:
 	allerdings schnell belegt sind. Außerdem findet man hier immer die
 	aktuellsten Tageszeitungen und einige Rechnerpools.
 	Grade in den ersten Tagen eures Studiums ist ein Besuch der Hauptstelle
-	sehr zu empfehlen, da zu Beginn des Semesters täglich Einführungen in den Umgang mit der UB stattfinden. Zusätzlich gibt es viele hilfreiche Tricks für das tägliche Leben mit der UB. Wann diese Führungen angeboten werden, erfahrt ihr unter  \url{http://www.ub.uni-tuebingen.de/}. Wichtig sind die extrem langen Ausleihfristen: die Standardfrist von 4 Wochen verlängert sich automatisch auf bis zu 3 Monate, falls euer Buch nicht angefordert wird. Dafür solltet ihr den EMail - Alarm anschalten, damit ihr auch bei Abwesenheit aus Tübingen über Rückgabefristen informiert bleibt. 
+	sehr zu empfehlen, da zu Beginn des Semesters täglich Einführungen in den Umgang mit der UB stattfinden. Zusätzlich gibt es viele hilfreiche Tricks für das tägliche Leben mit der UB. Wann diese Führungen angeboten werden, erfahrt ihr unter  \url{http://www.ub.uni-tuebingen.de/}. Wichtig sind die extrem langen Ausleihfristen: die Standardfrist von 4 Wochen verlängert sich automatisch auf bis zu 3 Monate, falls euer Buch nicht angefordert wird. Dafür solltet ihr den E-Mail-Alarm anschalten, damit ihr auch bei Abwesenheit aus Tübingen über Rückgabefristen informiert bleibt.
 	
 	\item[Außenstelle der Uni-Bibliothek auf der Morgenstelle]
 	Hier findet ihr eigentlich alles, was ihr im Grundstudium an
