--- a/shared/hilfe/psycho_beratung.tex
+++ b/shared/hilfe/psycho_beratung.tex
@@ -7,13 +7,13 @@ Geht es dir im Studium oder allgemein schlecht und dunkle Gedanken nehmen mehr
 Raum ein? Brauchst du jemanden zum Reden? Du bist nicht alleine und musst das nicht
 alleine durchstehen :)
 
-Wende dich in einen solchen Fall bitte an Anlaufstellen. Wie die Folgenden:
+Wende dich in einem solchen Fall bitte an Anlaufstellen, wie z.B. die Folgenden:
 \begin{itemize}
   \item die Psychotherapeutische Beratungsstelle des StuWe ist kostenlos und 
         steht allen Studis offen \\
         \link{\linkPsychoBeratung}{Psychotherapeutische Beratung}
   \item die Tübinger NightLine (von Studierenden für Studierende) \\
-        (\faPhone* 07071 8895440 | Mo-Do, Sa 21-24 Uhr) \\
+        (\faPhone* 07071 8895440 | Mo.--Do. und Sa., 21--24 Uhr) \\
         \link{\linkNightLine}{Tübinger Nightline}
   \item Die Telefonseelsorge (\faPhone* 0800 1110111)
 \end{itemize}
