--- a/shared/infra/zdv.tex
+++ b/shared/infra/zdv.tex
@@ -8,7 +8,7 @@ Jeder Student der Universität Tübingen hat bei seiner Immatrikulation einen ZD
     Gedruckt wird auf Laserdruckern der Firma Morgenstern, an denen man mit dem Studierendenausweis bezahlt. Kosten pro S/W-Seite:
     3 Cent.
 
-  \item[EMail:]
+  \item[E-Mail:]
     Ein Viren-gefilterter (lässt sich nicht abstellen) und SPAM-gefilterter
     (abschaltbar) E-Mail-Account \email{vorname.nachname@student.uni-tuebingen.de},
     der per IMAP sowohl an der Uni als auch Zuhause nutzbar ist. Webmail ist unter \url{https://webmail.uni-tuebingen.de/} verfügbar. 
@@ -29,10 +29,10 @@ Jeder Student der Universität Tübingen hat bei seiner Immatrikulation einen ZD
     WWW, per allgemeiner ZDV-Rundmail oder durch Aushänge.
 
    
-   \item[Windows \& Office für Bildung] Nicht direkt ein Service des ZDV, aber vielleicht trotzdem interessant: Es existiert eine kostenlose Möglichkeit, als Student ein Office 365-Abo und Windows 10 Edu zu erwerben. Nachteil: Man muss ein separates Konto bei Microsoft anlegen. Weitere Infos hierzu findet ihr unter \url{https://uni-tuebingen.de/de/45057}.	%TODO insert \link{}{}?
+   \item[Windows \& Office für Bildung:] Nicht direkt ein Service des ZDV, aber vielleicht trotzdem interessant: Es existiert eine kostenlose Möglichkeit, als Student ein Office 365-Abo und Windows 10 Edu zu erwerben. Nachteil: Man muss ein separates Konto bei Microsoft anlegen. Weitere Infos hierzu findet ihr unter \url{https://uni-tuebingen.de/de/45057}.	%TODO insert \link{}{}?
 
 
-  \item[Bildungslizenzen] Auf der Software Übersichtsseite \footnote{\url{https://uni-tuebingen.de/de/77076}} kann man sich durch die verschieden Software Lizenzen klicken, die auch Studierenden kostenlos zur Verfügung stehen.
+  \item[Bildungslizenzen:] Auf der Software Übersichtsseite \footnote{\url{https://uni-tuebingen.de/de/77076}} kann man sich durch die verschieden Software Lizenzen klicken, die auch Studierenden kostenlos zur Verfügung stehen.
 
   \item[Ansprechpartner Pools:]
     Ist erreichbar unter \email{beratung@zdv.uni-tuebingen.de}.
