--- a/shared/vorlesungszeit/hopo.tex
+++ b/shared/vorlesungszeit/hopo.tex
@@ -1,6 +1,6 @@
-An der Uni mag es zwar manchmal so wirken, dass die Studierenden der unwichstigste
-Teil des Apparates sind.
-Aber für uns Studierennde ist das eben nicht der Fall.
+An der Uni mag es zwar manchmal so wirken, als wären die Studierenden der unwichstigste
+Teil des Apparates.
+Aber für uns Studierende ist das eben nicht der Fall.
 Damit das auch die anderen Instanzen und Interessensgruppen verstehen, gibt es die Hochschulpolitik und \textit{Verfasste
 Studierendenschaft}. Dort kann jeder Studierende sich engagieren oder seine/ihre
 Anliegen hintragen.
@@ -21,24 +21,16 @@ Vertreten werden die Interessen der Verfassten Studierendenschaft beispielsweise
 %Einwohner sind Studierende. Es wundert also nicht, dass es hier eine
 %gut aufgestellte Studierendenvertretung gibt.
 
-%\subsection{StuRa, AStA, was ist das?}
-
-%Vielleicht sagt euch der Begriff AStA -- also Allgememeiner
-%Studierendenausschuss -- etwas. In Tübingen wurde der vor vielen Jahren vom
-%StuRa -- Kurzform von Studierenden Rat -- entmachtet und seitdem erfüllt dieser
-%die Rolle der allgemeinen Studierendenvertretung. Während wir als Fachschaft
-%eine studentische Vertretung im Fach sind, ist der StuRa allgemeingültiger.
-
 \subsubsection{StuRa}
 
-Der Studierenden Rat (StuRa) erfüllt die Rolle der allgemeinen Studierendenvertretung. 
+Der Studierendenrat (StuRa) erfüllt die Rolle der allgemeinen Studierendenvertretung. 
 Im Vergleich zur Fachschaft ist der StuRa dabei allgemeingültiger und repräsentiert alle Studierenden. 
 
-Der StuRa setzt sich aus 20 Studierenden zusammen, die Mitglied verschiedener Hochschulgruppen wie der Grünen Hochschulgruppe (GHG), der Juso Hochschulgruppe
+Der StuRa setzt sich aus 21 Studierenden zusammen, die Mitglied verschiedener Hochschulgruppen wie der Grünen Hochschulgruppe (GHG), der Juso Hochschulgruppe
 oder der FSVV sind. Gewählt werden diese im Sommersemester per Listenwahl. Wählen und sich aufstellen dürfen alle immatrikulierten Studierenden der Uni Tübingen.
 
-Es gibt verschiedenste Arbeitsgruppen in denen sich Studierende direkt in den StuRa einbringen können. 
-Eine Liste findet ihr auf der Seite des StuRa\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. 
+Es gibt verschiedenste Arbeitskreise, in denen sich Studierende direkt in die Hochschulpolitik einbringen können.
+Eine Liste findet ihr auf der Seite des StuRa\footnote{\url{https://www.vs-tuebingen.de/aks}}. % TODO: check url, might change
 Schaut da doch mal rein. Oder informiert euch auf den Social Media Kanälen 
 \faIcon{instagram}\href{https://www.instagram.com/vs\_tuebingen}{\texttt{vs\_tuebingen}}
 und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt{@vs@tuebingen.network}}.
@@ -47,8 +39,8 @@ und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt
 %Umwelt, Gleichstellung und Familienfreundliche Hochschule zu Ract!, überregionale
 %Zusammenarbeit. Jeder Studierende kann sich dort direkt selber einbringen.
 %Eine Liste findet ihr auf der Seite des StuRa
-%\footnote{\url{https://stura-tuebingen.de/arbeitskreise}}. Schaut da doch mal
-%rein. Oder informiert euch auf den Social Media Kanälen 
+%\footnote{\url{https://www.vs-tuebingen.de/aks}}. % TODO: check url, might change
+%Schaut da doch mal rein. Oder informiert euch auf den Social Media Kanälen
 %\faIcon{instagram}\href{https://www.instagram.com/vs\_tuebingen}{\texttt{vs\_tuebingen}}
 %und \faIcon{mastodon}\href{https://toot.kif.rocks/@vs@tuebingen.network}{\texttt{@vs@tuebingen.network}}.
 
@@ -66,7 +58,8 @@ ab, in der alle Studierende das Recht haben Anträge zu stellen und über diese 
 %SMV\footnote{Schüler Mit Verantwortung} an der Uni ist und es doch schon
 %allgemeinpolitischer ist.
 
-\link{https://stura-tuebingen.de/}{Studierendenrat Tübingen}
+% \link{https://stura-tuebingen.de/}{Studierendenrat Tübingen}
+\link{https://www.vs-tuebingen.de}{Verfasste Studierendenschaft} % TODO: Link prüfen, ggf. updaten. Aktuell (Sept. 2024) ist die alte Seite (https://stura-tuebingen.de) down, die neue ist aber nur halb fertig und es gibt beispielsweise (noch?) keine Seite direkt zum StuRa. Je nachdem wie die Website in Zukunft aussieht, kann man sich dann entscheiden ob man den Link zur Homepage der VS lässt oder zu einer Unterseite über den StuRa verlinkt.
 
 \subsubsection{FSVV}
 FSVV steht für \textbf{F}ach\textbf{S}chaften\textbf{V}oll\textbf{V}ersammlung und ist
