--- a/shared/vorlesungszeit/unikino.tex
+++ b/shared/vorlesungszeit/unikino.tex
@@ -1,9 +1,9 @@
 Das Unikino ist eine von Studierenden geleitete Veranstaltungsreihe, bei der
 unbekannte und in Vergessenheit geratene, aber auch recht aktuelle Filme
 gezeigt werden. Dabei werden die Filme meistens in Originalfassung (mit
-Untertiteln) gezeigt. Weitere Infos und den Spielplan gibt es auf der Website, 
-Instagram oder Facebook, über den folgenden QR-Code:
-\\
+Untertiteln) gezeigt. Weitere Infos und den Spielplan gibt es auf Instagram,
+Facebook und der Website über den folgenden QR-Code:
+% \\
 %Eine Vorstellung kostet \EUR{2} Eintritt, außerdem zahlt
 %ihr pro Semester einmalig \EUR{0,30} (übrigens gelten diese Preise auch für
 %Nicht-Studierende!). Alle Filme werden im Hörsaal 24 im Kupferbau gezeigt
@@ -29,8 +29,9 @@ Instagram oder Facebook, über den folgenden QR-Code:
 
 %\medskip \\
 
-\qrcode[height=2cm]{https://www.unifilm.de/studentenkinos/Tuebingen}
-\scriptsize{https://www.unifilm.de/studentenkinos/Tuebingen}
+\link{https://www.unifilm.de/studentenkinos/Tuebingen}{Unikino Tübingen}
+% \qrcode[height=2cm]{https://www.unifilm.de/studentenkinos/Tuebingen}
+% {\scriptsize{https://www.unifilm.de/studentenkinos/Tuebingen}}
 %\\
 % \qrcode[height=2cm]{https://www.instagram.com/unikino.tuebingen/?igsh=MWZqaGt6eWxkMjY3OQ==}
 % \scriptsize{https://www.instagram.com/unikino.tuebingen/?igsh=MWZqaGt6eWxkMjY3OQ==}
