--- a/shared/tuebingen/freizeitgestaltung.tex
+++ b/shared/tuebingen/freizeitgestaltung.tex
@@ -2,10 +2,10 @@
 
 \begin{description}
 \item[Schwimmbäder]
-In Tübingen gibt es drei Schwimmbäder, zwei Hallenbäder und ein Freibad. Die Hallenbäder wechseln sich mit ihren Öffnungszeiten ab. Wann welches Schwimmbad geöffnet ist, findet ihr auf der Website des SWT\footnote{\url{https://www.swtue.de/baeder/}}. Im Hallenbard Nord auf dem WHO ist außerdem eine Sauna untergebracht. Diese ist jedoch nicht sehr groß, und relativ teuer. Als Alternative bietet sich die Therme in Bad Urach (ca. 40min mit der Bahn) an.	%TODO insert \link{}{}?
+In Tübingen gibt es drei Schwimmbäder, zwei Hallenbäder und ein Freibad. Die Hallenbäder wechseln sich mit ihren Öffnungszeiten ab. Wann welches Schwimmbad geöffnet ist, findet ihr auf der Website der SWT\footnote{\url{https://www.swtue.de/baeder/}}. Im Hallenbad Nord auf dem WHO ist außerdem eine Sauna untergebracht. Diese ist jedoch nicht sehr groß, und relativ teuer. Als Alternative bietet sich die Therme in Bad Urach (ca. 40min mit der Bahn) an.	%TODO insert \link{}{}?
 
 \item[Landestheater]
-Das Landestheater(LTT)\footnote{\url{http://www.landestheater-tuebingen.de/}} führt in Tübingen regelmäßig größere und kleinere Inszenierungen von bekannten und unbekannten Stücken auf. Sehr zu empfehlen ist an dieser Stelle das Improtheater "Theatersport".	%TODO insert \link{}{}?
+Das Landestheater(LTT)\footnote{\url{http://www.landestheater-tuebingen.de/}} führt in Tübingen regelmäßig größere und kleinere Inszenierungen von bekannten und unbekannten Stücken auf. Sehr zu empfehlen ist an dieser Stelle das Improtheater "`Theatersport"'.	%TODO insert \link{}{}?
 
 \item[Kino]
 Neben dem Unikino gibt es in Tübingen drei große Kinos: Das Kino Blaue Brücke, das Kino im Museum und das Atelier. In der blauen Brücke werden eher die großen Hollywoodfilme gespielt, während im Museum auch immer wieder kleinere und unbekanntere Filme gezeigt werden. Dort finden auch jährlich die Französischen Filmtage statt.
