--- a/info/uni/gebaeude.tex
+++ b/info/uni/gebaeude.tex
@@ -5,7 +5,7 @@ Die Morgenstelle erreicht man am bequemsten mit dem Bus. In 98\% der Fälle soll
 %Einen Lageplan der wichtigen Gebäude und wichtigsten Orte auf der Morgenstelle findet ihr im Anhang.
 
 \textbf{Sand}\\
-Das Wilhelm-Schickard-Institut für Informatik oder auch einfach nur Sand genannt\footnote{Basierend auf den Postadressen Sand 1, 6, 7, 8, 13 und 14} ist das Institut der Informatik in Tübingen. In den ersten Semestern werdet ihr hier höchstens euer Prüfungssekretariat und/oder die Fachschaft besuchen. Auch wenn das Institut etwas außerhalb der restlichen Universität liegt, besticht es dennoch durch sein großzügiges Platzangebot und zahlreiche Möglichkeiten zur Freizeitgestaltung in Pausen. Unter anderem befinden sich auf dem Gelände ein Volleyballfeld, ein Fußballfeld und eine Tischtennisplatte. Bälle und Tischtennisschläger liegen in unserem Fachschaftsraum und dürfen von allen Studierenden der Informatik ausgeliehen werden.\\
+Das Wilhelm-Schickard-Institut für Informatik oder auch einfach nur Sand genannt\footnote{Basierend auf den Postadressen Sand 1, 6, 7, 8, 13 und 14} ist das Institut der Informatik in Tübingen. In den ersten Semestern werdet ihr hier höchstens die Fachschaft besuchen. Auch wenn das Institut etwas außerhalb der restlichen Universität liegt, besticht es dennoch durch sein großzügiges Platzangebot und zahlreiche Möglichkeiten zur Freizeitgestaltung in Pausen. Unter anderem befinden sich auf dem Gelände ein Volleyballfeld, ein Fußballfeld und eine Tischtennisplatte. Bälle und Tischtennisschläger liegen in unserem Fachschaftsraum und dürfen von allen Studierenden der Informatik ausgeliehen werden.\\
 Da es auf dem Sand anfangs immer schwierig ist, sich bei den Raumbezeichnungen zurechtzufinden, haben wir einen kleinen Übersichtsplan pro Stockwerk erstellt. Ihr findet diesen im Anhang.
 %TODO Orientierung Sand
 
