--- a/kogni/uni/infrastruktur.tex
+++ b/kogni/uni/infrastruktur.tex
@@ -1,5 +1,5 @@
 \subsubsection*{Studierendensekretariat}
-Das Studierendensekretariat\footnote{\url{https://uni-tuebingen.de/de/596}} befindet sich in der Wilhelmstraße 11 direkt neben der ehemaligen Mensa Wilhelmstraße. Das Studierendensekretariat ist zuständig für eure Immatrikulation und Exmatrikulation, amtliche Bescheinigungen, sowie alles was mit dem Studierendenausweis zu tun hat.	%TODO insert \link{}{}?
+Das Studierendensekretariat\footnote{\url{https://uni-tuebingen.de/de/596}} befindet sich in der Wilhelmstraße 19 direkt in der Nähe der Mensa Wilhelmstraße. Das Studierendensekretariat ist zuständig für eure Immatrikulation und Exmatrikulation, amtliche Bescheinigungen, sowie alles was mit dem Studierendenausweis zu tun hat.	%TODO insert \link{}{}?
 
 \subsubsection*{Studierendenterminals}
 An den Studierendenterminals könnt ihr den Aufdruck auf eurem
