--- a/info/erste_woche/einmaleins.tex
+++ b/info/erste_woche/einmaleins.tex
@@ -7,9 +7,9 @@ Damit ihr nicht ganz verloren im gro\ss en Uni-Wirrwarr umher irrt und
 %\item [Schwerpunkt-/Nebenfach:] Wenn ihr reine Informatik studiert, benötigt ihr ein Schwerpunktfach, also ein zweites Fach in dem ihr 18 LP erwerben müsst. Bei der Führung über den Sand werden  Schwerpunktfächer vorgestellt, später wird die Fachschaft noch eine Info-Veranstaltung speziell zum Schwerpunktfach anbieten. 
 
 
-%\item [Schwerpunkt-/Nebenfach:] Wenn ihr reine Informatik studiert, steht es
-%  euch offen, ob ihr 18 ECTS in ein Schwerpunktfach oder in ÜbK
-%  investieren wollt. Letzteres ermöglicht euch eine freiere Wahl an Kursen.
+\item [Schwerpunkt-/Nebenfach:] Wenn ihr reine Informatik studiert, steht es
+  euch offen, ob ihr 18 ECTS in ein Schwerpunktfach oder in ÜbK
+ investieren wollt. Letzteres ermöglicht euch eine freiere Wahl an Kursen.
   
 \item [übK:] In den meisten Informatik-Studiengängen ist eine bestimmte Anzahl ECTS an Überfachlichen Kompetenzen (übK) vorgesehen. Dabei handelt es sich um (fachfremde-) Wahlveranstaltungen, die einen Einblick in andere Studienrichtungen vermitteln sollten. Am Besten eignen sich hierfür Kurse des \href{https://uni-tuebingen.de/studium/studienangebot/ueberfachliche-kompetenzen/transdisciplinary-course-program/}{TRACS}-Programms der Uni, prinzipiell können aber auch beliebige Veranstaltungen anderer Studiengänge belegt werden, insofern die Anrechnung abgeklärt wurde.
 
