Remove obsolete content

--- a/anfiheft.tex
+++ b/anfiheft.tex
@@ -192,7 +192,7 @@
 
 \pagebreak
 
-\section{Die Universität}
+\section{Infrastruktur}
 \subsection{Die Mensen}
 \input{shared/vorlesungszeit/mensen.tex}
 
@@ -286,8 +286,8 @@
 	\subsection{Prüfungssekretariate}
 	\input{info/hilfe/pruefungsskretariate.tex}
 
-	\subsection{Studierendensekretariat}
-	\input{info/hilfe/studierendensekretariat.tex}
+	%\subsection{Studierendensekretariat}
+	%\input{info/hilfe/studierendensekretariat.tex}
 \fi
 \subsection{Psychosoziale Beratung}
 \input{shared/hilfe/psycho_beratung.tex}
