--- a/info/uni/gebaeude.tex
+++ b/info/uni/gebaeude.tex
@@ -9,7 +9,7 @@ Das Wilhelm-Schickard-Institut für Informatik oder auch einfach nur Sand genann
 Da es auf dem Sand anfangs immer schwierig ist, sich bei den Raumbezeichnungen zurechtzufinden, haben wir einen kleinen Übersichtsplan pro Stockwerk erstellt. Ihr findet diesen im Anhang.
 %TODO Orientierung Sand
 
-\textbf{TTR\footnote{aka: Die Machine von Learning-Straße}}\\
+\textbf{Maria-von-Linden-Straße\footnote{aka: Die Machine-von-Learning-Straße}/AI Center}\\
 Beginnend mit dem Tübingen AI Research Building wird für die Informatik auf der Oberen Viehweide mehr Platz geschaffen. Wer also Professoren für Machine Learning und Computergrafik sucht wird dort fündig.
 
 \textbf{Uni Tal}\\
